CSS 'user agent stylesheet' was overriding the styling and providing padding to the ul. This is now corrected so the a tags can be flexed accordingly and align with the text above.

--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,18 @@
   font-style: normal;
 };
 
+* {margin: 0; padding: 0;}
+
 ul {
   list-style-type: none;
+  padding: 0;
 }
+.nav-links-right {
+
+
+}
+
+
 li {
   padding: 0;
   display: inline-flex;
@@ -63,6 +72,7 @@ p {
   color: #627366;
   font-weight: 300;
   margin-bottom: 20px;
+  padding: 0;
 }
 
 
@@ -74,6 +84,7 @@ p {
   top: 0;
   overflow-x: hidden;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 /* Control the left side */
